--- a/index-mathjax.html
+++ b/index-mathjax.html
@@ -10,23 +10,13 @@
     </script>
     <script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML&delayStartupUntil=configured" type="text/javascript">
     </script>
+    <script type="text/javascript" src="mathjax.js" charset="UTF-8">
+    </script>
     <script type="text/javascript">
       var slideshow = remark.create({
       sourceUrl: 'slide.md',
       });
-
-      // Setup MathJax
-      MathJax.Hub.Config({
-      tex2jax: {
-      skipTags: ['script', 'noscript', 'style', 'textarea', 'pre']
-      }
-      });
-      MathJax.Hub.Queue(function() {
-      $(MathJax.Hub.getAllJax()).map(function(index, elem) {
-      return(elem.SourceElement());
-      }).parent().addClass('has-jax');
-      });
-      MathJax.Hub.Configured();
+      setupMathJax();
     </script>
   </body>
 </html>
