Access through template link

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>TITLE</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link rel="stylesheet" type="text/css" href="remarkjs.css">
+    <link rel="stylesheet" type="text/css" href="template/remarkjs.css">
   </head>
   <body>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js" type="text/javascript">
