--- a/index-mathjax.html
+++ b/index-mathjax.html
@@ -3,14 +3,14 @@
   <head>
     <title>TITLE</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link rel="stylesheet" type="text/css" href="remarkjs.css">
+    <link rel="stylesheet" type="text/css" href="template/remarkjs.css">
   </head>
   <body>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js" type="text/javascript">
     </script>
     <script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML&delayStartupUntil=configured" type="text/javascript">
     </script>
-    <script type="text/javascript" src="mathjax.js" charset="UTF-8">
+    <script type="text/javascript" src="template/mathjax.js" charset="UTF-8">
     </script>
     <script type="text/javascript">
       var slideshow = remark.create({
