Add highlightLines: true

--- a/index-mathjax.html
+++ b/index-mathjax.html
@@ -15,6 +15,7 @@
     <script type="text/javascript">
       var slideshow = remark.create({
       sourceUrl: 'slide.md',
+      highlightLines: true,
       });
       setupMathJax();
     </script>
