--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script type="text/javascript">
       var slideshow = remark.create({
       sourceUrl: 'slide.md',
+      highlightLines: true,
       });
     </script>
   </body>
