--- a/index-katex.html
+++ b/index-katex.html
@@ -13,21 +13,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/contrib/auto-render.min.js" integrity="sha384-dq1/gEHSxPZQ7DdrM82ID4YVol9BYyU7GbWlIwnwyPzotpoc57wDw/guX8EaYGPx" crossorigin="anonymous">
     </script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.css" integrity="sha384-wITovz90syo1dJWVh32uuETPVEtGigN07tkttEqPv+uR2SE/mbQcG7ATL28aI9H0" crossorigin="anonymous">
+    <script type="text/javascript" src="template/katex.js" charset="UTF-8">
+    </script>
     <script type="text/javascript">
-      var options = {
+      var slideshow = createSlideshow({
         sourceUrl: 'slide.md',
         highlightLines: true,
-      };
-      var renderMath = function() {
-        renderMathInElement(document.body, {
-          delimiters: [ // mind the order of delimiters(!?)
-            {left: "$$", right: "$$", display: true},
-            {left: "$", right: "$", display: false},
-            {left: "\\[", right: "\\]", display: true},
-            {left: "\\(", right: "\\)", display: false},
-        ]});
-      };
-      var slideshow = remark.create(options, renderMath);
+      });
     </script>
   </body>
 </html>
