Move details to mathjax.js

--- a/index-mathjax.html
+++ b/index-mathjax.html
@@ -13,11 +13,10 @@
     <script type="text/javascript" src="template/mathjax.js" charset="UTF-8">
     </script>
     <script type="text/javascript">
-      var slideshow = remark.create({
-      sourceUrl: 'slide.md',
-      highlightLines: true,
+      var slideshow = createSlideshow({
+        sourceUrl: 'slide.md',
+        highlightLines: true,
       });
-      setupMathJax();
     </script>
   </body>
 </html>
