--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
   <body>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js" type="text/javascript">
     </script>
+    <script type="text/javascript" src="template/default.js" charset="UTF-8">
+    </script>
     <script type="text/javascript">
-      var slideshow = remark.create({
-      sourceUrl: 'slide.md',
-      highlightLines: true,
+      var slideshow = createSlideshow({
+        sourceUrl: 'slide.md',
+        highlightLines: true,
       });
     </script>
   </body>
