--- a/index.html
+++ b/index.html
@@ -12,8 +12,15 @@
     </script>
     <script type="text/javascript">
       var slideshow = createSlideshow({
-        sourceUrl: 'slide.md',
-        highlightLines: true,
+      sourceUrl: 'slide.md',
+      highlightStyle: 'googlecode',
+      highlightSpans: true,
+      ratio: '16:9',
+      navigation: {
+      scroll: false,
+      touch: false,
+      click: false,
+      },
       });
     </script>
   </body>
