Fix printing problem

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <title>TITLE</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" type="text/css" href="template/remarkjs.css">
+    <style>
+      @page {
+      size: 1210px 681px;
+      <!-- size: 908px 681px; -->
+      }
+    </style>
   </head>
   <body>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js" type="text/javascript">
