--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>TITLE</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" type="text/css" href="template/remarkjs.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.css" integrity="sha384-wITovz90syo1dJWVh32uuETPVEtGigN07tkttEqPv+uR2SE/mbQcG7ATL28aI9H0" crossorigin="anonymous">
     <style>
       @page {
       size: 1210px 681px;
@@ -12,12 +13,13 @@
     </style>
   </head>
   <body>
-    <script src="https://remarkjs.com/downloads/remark-latest.min.js" type="text/javascript">
-    </script>
-    <script type="text/javascript" src="template/default.js" charset="UTF-8">
-    </script>
+    <script src="https://remarkjs.com/downloads/remark-latest.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.js" integrity="sha384-/y1Nn9+QQAipbNQWU65krzJralCnuOasHncUFXGkdwntGeSvQicrYkiUBwsgUqc1" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/contrib/auto-render.min.js" integrity="sha384-dq1/gEHSxPZQ7DdrM82ID4YVol9BYyU7GbWlIwnwyPzotpoc57wDw/guX8EaYGPx" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="template/default.js" charset="UTF-8"></script>
+    <script type="text/javascript" src="template/katex.js" charset="UTF-8"></script>
     <script type="text/javascript">
-      var slideshow = createSlideshow({
+      var slideshow = remark.create({
       sourceUrl: 'slide.md',
       highlightStyle: 'googlecode',
       highlightSpans: true,
@@ -26,8 +28,10 @@
       scroll: false,
       touch: false,
       click: false,
-      },
-      });
+      }
+      }
+      <!-- , katex() -->
+      );
     </script>
   </body>
 </html>
