--- a/index.html
+++ b/index.html
@@ -16,22 +16,6 @@
     <script src="https://remarkjs.com/downloads/remark-latest.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.js" integrity="sha384-/y1Nn9+QQAipbNQWU65krzJralCnuOasHncUFXGkdwntGeSvQicrYkiUBwsgUqc1" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/contrib/auto-render.min.js" integrity="sha384-dq1/gEHSxPZQ7DdrM82ID4YVol9BYyU7GbWlIwnwyPzotpoc57wDw/guX8EaYGPx" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="template/default.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="template/katex.js" charset="UTF-8"></script>
-    <script type="text/javascript">
-      var slideshow = remark.create({
-      sourceUrl: 'slide.md',
-      highlightStyle: 'googlecode',
-      highlightSpans: true,
-      ratio: '16:9',
-      navigation: {
-      scroll: false,
-      touch: false,
-      click: false,
-      }
-      }
-      <!-- , katex() -->
-      );
-    </script>
+    <script type="text/javascript" src="slideshow.js" charset="UTF-8"></script>
   </body>
 </html>
