--- a/index-katex.html
+++ b/index-katex.html
@@ -2,6 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
+    <link href="katex.min.css" rel="stylesheet" type="text/css">
     <link href="style.css" rel="stylesheet" type="text/css">
     <title>TITLE</title>
   </head>
@@ -32,6 +33,8 @@ DATE
 # Introduction
     </textarea>
     <script src="remark-latest.min.js" type="text/javascript"></script>
-    <script src="slide.js" type="text/javascript"></script>
+    <script src="katex.min.js" type="text/javascript"></script>
+    <script src="auto-render.min.js" type="text/javascript"></script>
+    <script src="slide-katex.js" type="text/javascript"></script>
   </body>
 </html>
