Update to use page css

--- a/index-katex.html
+++ b/index-katex.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link href="katex.min.css" rel="stylesheet" type="text/css">
     <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="page16-9.css" rel="stylesheet" type="text/css">
     <title>TITLE</title>
   </head>
   <body>
