--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="page16-9.css" rel="stylesheet" type="text/css">
     <title>TITLE</title>
   </head>
   <body>
