--- a/index-katex.html
+++ b/index-katex.html
@@ -2,9 +2,9 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <link href="katex.min.css" rel="stylesheet" type="text/css">
-    <link href="style.css" rel="stylesheet" type="text/css">
-    <link href="page16-9.css" rel="stylesheet" type="text/css">
+    <link href="css/katex.min.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="css/page16-9.css" rel="stylesheet" type="text/css">
     <title>TITLE</title>
   </head>
   <body>
@@ -33,9 +33,9 @@ DATE
 
 # Introduction
     </textarea>
-    <script src="remark-latest.min.js" type="text/javascript"></script>
-    <script src="katex.min.js" type="text/javascript"></script>
-    <script src="auto-render.min.js" type="text/javascript"></script>
-    <script src="slide-katex.js" type="text/javascript"></script>
+    <script src="js/remark-latest.min.js" type="text/javascript"></script>
+    <script src="js/katex.min.js" type="text/javascript"></script>
+    <script src="js/auto-render.min.js" type="text/javascript"></script>
+    <script src="js/slide-katex.js" type="text/javascript"></script>
   </body>
 </html>
