--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <link href="style.css" rel="stylesheet" type="text/css">
-    <link href="page16-9.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="css/page16-9.css" rel="stylesheet" type="text/css">
     <title>TITLE</title>
   </head>
   <body>
@@ -32,7 +32,7 @@ DATE
 
 # Introduction
     </textarea>
-    <script src="remark-latest.min.js" type="text/javascript"></script>
-    <script src="slide.js" type="text/javascript"></script>
+    <script src="js/remark-latest.min.js" type="text/javascript"></script>
+    <script src="js/slide.js" type="text/javascript"></script>
   </body>
 </html>
