--- a/index-katex.html
+++ b/index-katex.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href="css/katex.min.css" rel="stylesheet" type="text/css">
-    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="main.css" rel="stylesheet" type="text/css">
     <title>TITLE</title>
   </head>
   <body>
