--- a/index.html
+++ b/index.html
@@ -33,5 +33,8 @@ DATE
     </textarea>
     <script src="js/remark-latest.min.js" type="text/javascript"></script>
     <script src="js/slide.js" type="text/javascript"></script>
+    <!-- <script src="js/katex.min.js" type="text/javascript"></script> -->
+    <!-- <script src="js/auto-render.min.js" type="text/javascript"></script> -->
+    <!-- <script src="js/slide-katex.js" type="text/javascript"></script> -->
   </body>
 </html>
