--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   </head>
   <body>
     <textarea id="source">
-class: center, middle
+class: title
 
 # TITLE
 
-### SUBTITLE
+## SUBTITLE
 
 ### AUTHOR
 
