Update index.html and new-slide.sh

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link href="main.css" rel="stylesheet" type="text/css">
     <link href="title.css" rel="stylesheet" type="text/css">
     <link href="common.css" rel="stylesheet" type="text/css">
+    <link href="layout.css" rel="stylesheet" type="text/css">
+    <link href="style.css" rel="stylesheet" type="text/css">
     <!-- <link href="katex.css" rel="stylesheet" type="text/css"> -->
     <!-- <link href="katex.min.css" rel="stylesheet" type="text/css"> -->
     <title>TITLE</title>
